finalproject/styles/final-project.css
/* This is the CSS styling for the mobile version */
:root {
    --white: rgba(255, 251, 252, 1);
    --black: rgba(36, 36, 36, 1);
    --orange: rgba(199, 54, 5, 1);
    --darkblue: rgba(3, 45, 74, 1);
    --lightblue: rgba(16, 126, 119, 1);
    --green: rgba(51, 132, 51, 1);
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

img, 
#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"],
.form-box label, input,
#eventContainer {
    display: block;
}

img {
    max-width: 100%;
    height: auto;
    animation: blur 3s;
}

@keyframes blur {
    0% { -webkit-filter: blur(5px);}
    100% { -webkit-filter: blur(0px);}
}

.bring-front {
    z-index: 1;
}

body {
    background-color: var(--white);
}

h1, h2, h3, .navigation a, #destinationBtnTowns, #destinationBtnParks, #submit {
    font-family: "Roboto", sans-serif;
}

h1 {
    font-size: 2.875rem;
    font-weight: 700;
    letter-spacing: 2px;	
    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
}

h1, 
#eventContainer section p:nth-of-type(4),
.confirmation-paragraph:nth-last-of-type(2) {
    padding-top: 1rem;
}

h1,
#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"],
#eventContainer section h3, 
#destinationsContainer section h3, 
.form-paragraph,
.intro-paragraph-box p,
.form-box label,
.confirmation-paragraph,
#topDestinationsHeading,
footer p,
.image-references li,
.image-references li a,
footer label {
    color: var(--white);
}

.delayed-element {
    opacity: 0;
    animation: fadeIn 2s 1s forwards;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

#destinationsHeading {
    margin: 4rem 2rem 2rem 2rem; 
}

h3, #topDestinationsHeading {
    font-size: 1.5rem;
}

h1, p {
    line-height: 1.6;
}

#menu-button, 
.navigation a,
h2, 
#eventHeading, 
#destinationsHeading2, 
#eventSelection,
#formHeading,
.label {
    color: var(--darkblue);
}

/* small view navigation */
#menu-button {
    font-size: 3.2rem;
    margin-top: 1.2rem;
    border: 0;
	background: none;
}

#menu-button::before {
	content: "☰";
}

#menu-button.open::before {
	content: "✖";
}

.navigation, 
.image-references {
    list-style-type: none;
}

.navigation {
    display: flex;
    flex-direction: column;
}

.navigation a,
#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"] {
    font-size: 1.375rem;
    text-decoration: none;
}

.navigation a,
.label {
    font-weight: 500;
}

.navigation a,
#imageReferencesToogle {
    display: none;
}

.navigation a {
    padding: 0rem 0rem 3rem 0rem;
}

/* when the menu button is clicked - the open class is toggled (added/removed) */
.open a {
	display: block;
}

.navigation a:nth-of-type(1) {
    padding-top: 1.5rem;
}

.navigation a:nth-of-type(3) {
    padding-bottom: 2rem;
}

#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"],
input[type="text"],
input[type="email"] {
    border: none;
    border-radius: 10px;
}

#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"],
.confirmation-paragraph,
.button-container, 
.navigation a, 
h1, 
h2, 
h3, 
.form-paragraph, 
footer p {
    text-align: center;
}

#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"] {
    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
    height: 3.938rem;
}

#destinationBtnTowns,
#destinationBtnParks,
input[type="submit"],
#eventSelection,
footer label {
    cursor: pointer;
}

#destinationBtnTowns,
#destinationBtnParks {
    padding: 1.125rem 0rem;
    margin: 0rem auto 3rem auto;
    max-width: 13.217rem;
}

input[type="submit"],
#eventContainer section:nth-child(even) h3 {
    background-color: var(--orange);
}

input[type="submit"],
input[type="text"],
input[type="email"],
#eventSelection {
    width: 100%;
}

input[type="submit"] {
    padding: 1.125rem 3rem;
    margin: 1rem auto .5rem auto;
}

#destinationBtnTowns:hover {
    color: var(--darkblue);
    background-color: var(--white);
    outline: 1px solid var(--darkblue);
}

#destinationBtnParks:hover {
    color: var(--green);
    background-color: var(--white);
    outline: 1px solid var(--green);
}

input[type="submit"]:hover {
    color: var(--orange);
    background-color: var(--white);
    outline: 2px solid var(--orange);
}

#destinationBtnTowns:active,
#destinationBtnParks:active,
input[type="submit"]:active {
    color: var(--white);
    background-color: var(--lightblue);
    outline: none;
}

#name, #email {
    font-size: 1.25rem;
    margin-top: .4rem;
}

#name {
    margin-bottom: 1rem;
}

.dark-blue-bg-color {
    background-color: var(--darkblue);
}

.green-bg-color {
    background-color: var(--green);
}

#eventHeading, #destinationsHeading2 {
    font-size: 1.875rem;
}

#eventHeading, #destinationsHeading2 {
    padding: 1.2rem 0rem 1rem 0rem;
}

#eventSelection option:hover {
    background-color: var(--darkblue);
    color: var(--white);
}

p, span, label, select, 
#eventContainer section a,
footer label,
.image-references li,  
.image-references li a {
    font-size: 1.25rem;
}

p, span, label, select, 
#eventContainer section a,
.image-references li,
.image-references li a,
input[type="text"],
input[type="email"] {
    font-family: "DM Sans", serif;
}

#eventContainer section a {
    color: var(--lightblue);
    max-width: max-content;
}

#eventContainer section a:hover {
    text-decoration: none;
}

p, 
.event-section label, 
#eventContainer section label,
#destinationsContainer section p {
    color: var(--black);
}

#eventContainer section h3 {
    margin-bottom: .8rem;
}

#eventContainer section h3, 
#destinationsContainer section h3, 
.form-paragraph {
    width: auto;
    height: 5.225rem;
    padding: .8rem;
}

#eventContainer section h3, 
#destinationsContainer section h3, 
.form-paragraph,
#topDestinationsHeading,
.image-references li,
footer  {
    background-color: var(--darkblue);
}

.form-paragraph {
    font-weight: 600;
}

#destinationsContainer section h3, 
#topDestinationsHeading {
    padding: 1.7rem 0rem;
}

#eventContainer section p, a, 
.image-references li:nth-child(1) {
    padding: 0rem .8rem;
}

/* Where to Go Page */
.grid-layout {
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
}

#montenegro-destination-photo {
    grid-row: 1 / 3;
    grid-column: 1 / 2;
}

.intro-paragraph-box {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    background-color: rgba(3, 45, 74, 0.7);
    padding: 2.2rem 1.8rem;
}

.orange-bg-color {
    background-color: rgba(199, 54, 5, 0.7);
}

#destinationsContainer section p,
.info-box p {
    padding: 1.8rem 1.8rem 4.5rem 1.8rem;
}

#destinationsContainer section:nth-last-child(1) p,
.perast-container .info-box p {
    padding-bottom: 2.2rem;
}

.intro-paragraph-box p, #destinationsContainer section p {
    text-align: justify;
}

.green-bg-color-with-opacity {
    background-color: rgba(51, 132, 51, 0.7);
}

.form-container {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 1fr;
}

#form-photo {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

.subscription-form {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

.form-box {
    margin: .8rem;
}

.form-box label {
    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
}

input[type="text"],
input[type="email"]
{
    padding: .75rem;
    appearance: none;
}

#formHeading, #destinationsHeading {
    font-size: 2.625rem;
} 

#formHeading {
    margin: 0rem .5rem 1.5rem .5rem;
}

.confirmation-paragraph:nth-last-of-type(1) {
    padding-bottom: 1rem;
}

header, 
.event-section, 
.form-section {
    padding: 2.2rem 1rem;
}

header, 
main, 
img,
.intro-paragraph-box p, 
#destinationsContainer section p {
    margin: 0 auto;
}

.logo-box {
    float: center;
}

.intro-section {
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
}

.main-heading-box {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    z-index: 1;
}

.montenegro-banner {
    grid-row: 1 / 3;
    grid-column: 1 / 2;
}

#eventSelection,
#eventContainer section {
    border: 1px solid var(--darkblue);
} 

#eventSelection {
    padding: .5rem;
}

#eventContainer section,
input[type="text"],
input[type="email"] {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
}

#eventContainer section {
    border-radius: 2px;
    margin-top: 2rem;
    padding-bottom: 2.4rem;
}

#eventContainer section:nth-child(even) {
    border: 1px solid var(--orange);
}

/* What to See Page */
.kotor-container {
    margin-top: 5.1rem;
}

#topDestinationsHeading {
    margin: 0rem;
}

/* Footer */
footer {
    margin-top: 3rem;
    padding: 1rem;
}

footer p,
.image-references li,
.image-references li a {
    font-size: 1.125rem;
}

#currentyear, #lastModified {
    font-size: 1rem;
}

footer label {
    display: inline-block;
    text-decoration: underline;
    height: 20px;
    width: max-content;
    margin: .75rem;
}

footer label:hover {
    text-decoration: none;
}

.image-references {
    width: 780px;
    overflow: hidden;
    max-height: 0;
    padding: 0rem;
    transition: all 0.3s ease;
}
  
#imageReferencesToogle:checked + .image-references {
    max-height: 2000px;
}

.image-references li {
    margin-bottom: 1.6rem;
    text-align: left;
}

.image-references li a:hover {
    text-decoration: none;
}

.image-references li a:active {
    color: var(--lightblue);
}

.image-references, 
.image-references li:nth-child(1) {
    margin-top: .5rem;
}

